objects/BLND_DFDT_Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002PYjvEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Due__c</fullName>
        <label>Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Include_in_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Issue_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Link</label>
        <referenceTo>BLND_DFDT_Issue__c</referenceTo>
        <relationshipName>R00N30000002PYhfEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Project_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Link</label>
        <referenceTo>BLND_DFDT_Project__c</referenceTo>
        <relationshipLabel>DreamTeam Action Items</relationshipLabel>
        <relationshipName>R00N30000002PYgzEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLND_Task_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Link</label>
        <referenceTo>BLND_DFDT_Task__c</referenceTo>
        <relationshipLabel>DreamTeam Action Items</relationshipLabel>
        <relationshipName>R00N30000002PYgtEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>DreamTeam Action Item</label>
    <nameField>
        <label>Action Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Action Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>